infra/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: moov-ingress
  namespace: moov
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: moov.bastian-somon.fr
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: moov-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moov-frontend
                port:
                  number: 80
